==========================
Change History for ZConfig
==========================

ZConfig (unreleased)
--------------------

- Fix relative path recognition.
  https://bugs.launchpad.net/zconfig/+bug/405687

ZConfig 2.7.1 (2009/06/13)
--------------------------

- Improved documentation

- Fixed tests failures on windows.

ZConfig 2.7.0 (2009/06/11)
--------------------------

- Added a convenience function, ``ZConfig.configureLoggers(text)`` for
  configuring loggers.

- Relaxed the requirement for a logger name in logger sections,
  allowing the logger section to be used for both root and non-root
  loggers.

ZConfig 2.6.1 (2008/12/05)
--------------------------

- Fixed support for schema descriptions that override descriptions from a base
  schema.  If multiple base schema provide descriptions but the derived schema
  does not, the first base mentioned that provides a description wins.
  https://bugs.launchpad.net/zconfig/+bug/259475

- Fixed compatibility bug with Python 2.5.0.

- No longer trigger deprecation warnings under Python 2.6.


ZConfig 2.6.0 (2008/09/03)
--------------------------

- Added support for file rotation by time by specifying when and
  interval, rather than max-size, for log files.

- Removed dependency on setuptools from the setup.py.


ZConfig 2.5.1 (2007/12/24)
--------------------------

- Made it possible to run unit tests via 'python setup.py test' (requires
  setuptools on sys.path).

- Added better error messages to test failure assertions.

ZConfig 2.5 (31 Aug 2007)
-------------------------

  *A note on the version number:*

  Information discovered in the revision control system suggests that
  some past revision has been called "2.4", though it is not clear that
  any actual release was made with that version number.  We're going to
  skip revision 2.4 entirely to avoid potential issues with anyone using
  something claiming to be ZConfig 2.4, and go straight to version 2.5.
