@@ -212,7 +212,16 @@ class SMTPHandlerFactory(HandlerFactory):
             mailhost = host
         else:
             mailhost = host, port
+        kwargs = {}
+        if self.section.smtp_auth_username or self.section.smtp_auth_password:
+            # Since credentials were only added in py2.6 we use a kwarg to not
+            # break compatibility with older py
+            if sys.version_info < (2, 6):
+                raise ValueError('SMTP auth requires at least Python 2.6.')
+            kwargs['credentials'] = (self.section.smtp_auth_username,
+                                     self.section.smtp_auth_password)
         return loghandler.SMTPHandler(mailhost,
                                       self.section.fromaddr,
                                       self.section.toaddrs,
-                                      self.section.subject)
+                                      self.section.subject,
+                                      **kwargs)
