@@ -79,6 +79,8 @@
     <multikey name="to" required="yes" attribute="toaddrs"/>
     <key name="subject" default="Message from Zope"/>
     <key name="smtp-server" default="localhost" datatype="inet-address"/>
+    <key name="smtp-auth-username" default="" datatype="string"/>
+    <key name="smtp-auth-password" default="" datatype="string"/>
     <key name="format"
          default="%(asctime)s %(levelname)s %(name)s %(message)s"
          datatype=".log_format"/>
